Update 更新接口, Add 退出登录
