# apiclient/src/models/index.ts
@@ -2,10 +2,11 @@ export * from './log-output';
 export * from './login-input';
 export * from './mobile-file-dto';
 export * from './mobile-log-file-dto';
+export * from './mobile-trajectory-dto';
 export * from './pda-billing-info';
-export * from './pda-cust-details-dto';
-export * from './pda-cust-details-dto-list-result-dto';
 export * from './pda-cust-details-input';
+export * from './pda-cust-dto';
+export * from './pda-cust-dto-list-result-dto';
 export * from './pda-cust-info';
 export * from './pda-cust-list-dto';
 export * from './pda-cust-list-dto-list-result-dto';
@@ -18,8 +19,9 @@ export * from './pda-read-data-dto-list-result-dto';
 export * from './pda-reading-record';
 export * from './pda-user-permission-dto';
 export * from './read-data-by-book-ids-input';
-export * from './reading-date-dto';
+export * from './reading-data-dto';
 export * from './reading-file-dto';
 export * from './upload-mobile-log-file-dto';
-export * from './upload-reading-date-dto';
+export * from './upload-reading-data-dto';
 export * from './upload-reading-file-dto';
+export * from './upload-trajectory-dto';
