# apiclient/src/models/pda-cust-dto.ts
@@ -1,0 +1,50 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * 抄表系统 - Pda抄表
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * OpenAPI spec version: v1
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+/**
+ * 客户详情
+ * @export
+ * @interface PdaCustDto
+ */
+export interface PdaCustDto {
+    /**
+     * 客户编号
+     * @type {number}
+     * @memberof PdaCustDto
+     */
+    custId?: any;
+    /**
+     * 
+     * @type {PdaCustInfo}
+     * @memberof PdaCustDto
+     */
+    custInfo?: any;
+    /**
+     * 
+     * @type {Array&lt;PdaReadingRecord&gt;}
+     * @memberof PdaCustDto
+     */
+    readingRecords?: any;
+    /**
+     * 
+     * @type {Array&lt;PdaBillingInfo&gt;}
+     * @memberof PdaCustDto
+     */
+    billingInfos?: any;
+    /**
+     * 
+     * @type {Array&lt;PdaPayRecord&gt;}
+     * @memberof PdaCustDto
+     */
+    payRecords?: any;
+}
