# apiclient/src/models/reading-data-dto.ts
@@ -1,0 +1,86 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * 抄表系统 - Pda抄表
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * OpenAPI spec version: v1
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+/**
+ * Pda抄表数据
+ * @export
+ * @interface ReadingDataDto
+ */
+export interface ReadingDataDto {
+    /**
+     * 抄表年月
+     * @type {number}
+     * @memberof ReadingDataDto
+     */
+    billMonth?: any;
+    /**
+     * 客户编号
+     * @type {number}
+     * @memberof ReadingDataDto
+     */
+    custId?: any;
+    /**
+     * 抄次
+     * @type {number}
+     * @memberof ReadingDataDto
+     */
+    readTimes?: any;
+    /**
+     * 本次抄码
+     * @type {number}
+     * @memberof ReadingDataDto
+     */
+    reading?: any;
+    /**
+     * 本次子表抄码
+     * @type {number}
+     * @memberof ReadingDataDto
+     */
+    childReading?: any;
+    /**
+     * 本次抄见水量
+     * @type {number}
+     * @memberof ReadingDataDto
+     */
+    readWater?: any;
+    /**
+     * 本次抄表时间
+     * @type {Date}
+     * @memberof ReadingDataDto
+     */
+    readDate?: any;
+    /**
+     * 抄表状态
+     * @type {number}
+     * @memberof ReadingDataDto
+     */
+    readStateId?: any;
+    /**
+     * 量高量低标志
+     * @type {number}
+     * @memberof ReadingDataDto
+     */
+    highLowState?: any;
+    /**
+     * 是否估抄
+     * @type {boolean}
+     * @memberof ReadingDataDto
+     */
+    isEstimate?: any;
+    /**
+     * 备注
+     * @type {string}
+     * @memberof ReadingDataDto
+     */
+    readRemark?: any;
+}
