# apiclient/swagger.json
@@ -229,17 +229,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "$ref": "#/components/schemas/PdaCustDetailsDtoListResultDto"
+                  "$ref": "#/components/schemas/PdaCustDtoListResultDto"
                 }
               },
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/PdaCustDetailsDtoListResultDto"
+                  "$ref": "#/components/schemas/PdaCustDtoListResultDto"
                 }
               },
               "text/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/PdaCustDetailsDtoListResultDto"
+                  "$ref": "#/components/schemas/PdaCustDtoListResultDto"
                 }
               }
             }
@@ -294,7 +294,7 @@
         "tags": [
           "Login"
         ],
-        "summary": "抄表员登录",
+        "summary": "登录",
         "requestBody": {
           "description": "",
           "content": {
@@ -341,6 +341,19 @@
                 }
               }
             }
+          }
+        }
+      }
+    },
+    "/api/app/login/logout": {
+      "post": {
+        "tags": [
+          "Login"
+        ],
+        "summary": "登出",
+        "responses": {
+          "200": {
+            "description": "Success"
           }
         }
       }
@@ -395,22 +408,22 @@
           "content": {
             "application/json-patch+json": {
               "schema": {
-                "$ref": "#/components/schemas/UploadReadingDateDto"
+                "$ref": "#/components/schemas/UploadReadingDataDto"
               }
             },
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/UploadReadingDateDto"
+                "$ref": "#/components/schemas/UploadReadingDataDto"
               }
             },
             "text/json": {
               "schema": {
-                "$ref": "#/components/schemas/UploadReadingDateDto"
+                "$ref": "#/components/schemas/UploadReadingDataDto"
               }
             },
             "application/*+json": {
               "schema": {
-                "$ref": "#/components/schemas/UploadReadingDateDto"
+                "$ref": "#/components/schemas/UploadReadingDataDto"
               }
             }
           },
@@ -450,6 +463,45 @@
             "application/*+json": {
               "schema": {
                 "$ref": "#/components/schemas/UploadReadingFileDto"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
+    "/api/app/mobileReading/uploadTrajectory": {
+      "post": {
+        "tags": [
+          "MobileReading"
+        ],
+        "summary": "抄表员轨迹上传",
+        "requestBody": {
+          "description": "",
+          "content": {
+            "application/json-patch+json": {
+              "schema": {
+                "$ref": "#/components/schemas/UploadTrajectoryDto"
+              }
+            },
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UploadTrajectoryDto"
+              }
+            },
+            "text/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UploadTrajectoryDto"
+              }
+            },
+            "application/*+json": {
+              "schema": {
+                "$ref": "#/components/schemas/UploadTrajectoryDto"
               }
             }
           },
@@ -860,7 +912,7 @@
           }
         },
         "additionalProperties": false,
-        "description": "移动端抄表-客户清单"
+        "description": "Pda抄表数据下载"
       },
       "PdaReadDataDtoListResultDto": {
         "type": "object",
@@ -1074,7 +1126,7 @@
         "additionalProperties": false,
         "description": "缴费记录"
       },
-      "PdaCustDetailsDto": {
+      "PdaCustDto": {
         "type": "object",
         "properties": {
           "custId": {
@@ -1110,13 +1162,13 @@
         "additionalProperties": false,
         "description": "客户详情"
       },
-      "PdaCustDetailsDtoListResultDto": {
+      "PdaCustDtoListResultDto": {
         "type": "object",
         "properties": {
           "items": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/PdaCustDetailsDto"
+              "$ref": "#/components/schemas/PdaCustDto"
             },
             "nullable": true
           }
@@ -1190,7 +1242,7 @@
           }
         },
         "additionalProperties": false,
-        "description": "登录"
+        "description": "登录请求"
       },
       "LogOutput": {
         "type": "object",
@@ -1207,7 +1259,7 @@
           }
         },
         "additionalProperties": false,
-        "description": "登录"
+        "description": "登录返回"
       },
       "MobileLogFileDto": {
         "required": [
@@ -1250,7 +1302,7 @@
         "additionalProperties": false,
         "description": "Pda日志上传"
       },
-      "ReadingDateDto": {
+      "ReadingDataDto": {
         "type": "object",
         "properties": {
           "billMonth": {
@@ -1312,9 +1364,9 @@
           }
         },
         "additionalProperties": false,
-        "description": "Pda抄表数据上传"
+        "description": "Pda抄表数据"
       },
-      "UploadReadingDateDto": {
+      "UploadReadingDataDto": {
         "required": [
           "deviceCode",
           "readingDates"
@@ -1328,7 +1380,7 @@
           "readingDates": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/ReadingDateDto"
+              "$ref": "#/components/schemas/ReadingDataDto"
             },
             "description": "抄表数据"
           }
@@ -1364,7 +1416,7 @@
           }
         },
         "additionalProperties": false,
-        "description": "Pda抄表附件上传"
+        "description": "Pda抄表附件"
       },
       "UploadReadingFileDto": {
         "required": [
@@ -1387,6 +1439,50 @@
         },
         "additionalProperties": false,
         "description": "Pda附件上传"
+      },
+      "MobileTrajectoryDto": {
+        "type": "object",
+        "properties": {
+          "longitude": {
+            "type": "number",
+            "description": "经度",
+            "format": "float"
+          },
+          "latitude": {
+            "type": "number",
+            "description": "维度",
+            "format": "float"
+          },
+          "collectTime": {
+            "type": "string",
+            "description": "采集时间",
+            "format": "date-time"
+          }
+        },
+        "additionalProperties": false,
+        "description": "轨迹"
+      },
+      "UploadTrajectoryDto": {
+        "required": [
+          "deviceCode"
+        ],
+        "type": "object",
+        "properties": {
+          "deviceCode": {
+            "type": "string",
+            "description": "设备号"
+          },
+          "trajectorys": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/MobileTrajectoryDto"
+            },
+            "description": "Pda日志",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false,
+        "description": "抄表员轨迹上传"
       }
     },
     "securitySchemes": {
@@ -1405,6 +1501,10 @@
   ],
   "tags": [
     {
+      "name": "Charge",
+      "description": "营收数据查询"
+    },
+    {
       "name": "MobileLog",
       "description": "Pda日志上传"
     },
@@ -1415,10 +1515,6 @@
     {
       "name": "Login",
       "description": "登录"
-    },
-    {
-      "name": "Charge",
-      "description": "营收数据查询"
     }
   ]
 }
